--- a/src/main/webapp/account/bordrohavalekhesarat.xhtml
+++ b/src/main/webapp/account/bordrohavalekhesarat.xhtml
@@ -6,7 +6,7 @@
 <p:panel header="#{msg['bordroehavalekhesarat']}" toggleable="true" toggleSpeed="500"
          styleClass="matnfarsi" style="direction: rtl" >
     <h:form>
-        <h:panelGrid columns="4" cellpadding="5">
+        <h:panelGrid columns="8" cellpadding="5">
 
             <p:outputLabel value="#{msg['vaziateparvande']} : " for="vaziateparvande" />
             <p:selectOneMenu id="vaziateparvande" value="#{bordroHavaleKhesaratBean.havaleKhesaratSearchModel.vaziateParvandeKhesarat}"
@@ -55,6 +55,14 @@
 
         <p:column headerText="#{msg['shomarehavale']}" style="text-align: center" styleClass="matnfarsi">
             <p:outputLabel style="font-family: byekan" value=" #{nextbordro.shomareHavale}"/>
+        </p:column>
+
+        <p:column headerText="#{msg['tarikheSodoor']}" style="text-align: center" styleClass="matnfarsi">
+            <p:outputLabel style="font-family: byekan" value=" #{nextbordro.tarikhSodoorHavale}"/>
+        </p:column>
+
+        <p:column headerText="#{msg['darVajh']}" style="text-align: center" styleClass="matnfarsi">
+            <p:outputLabel style="font-family: byekan" value=" #{nextbordro.darVajh}"/>
         </p:column>
 
         <p:column headerText="#{msg['mablaghHavale']}" style="text-align: center" styleClass="matnfarsi">
